syntax = "proto3";
package dydxprotocol.clob;

import "dydxprotocol/subaccounts/streaming.proto";
import "dydxprotocol/clob/query.proto";

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/clob/types";

// StagedFinalizeBlockEvent is an event staged during `FinalizeBlock`.
message StagedFinalizeBlockEvent {
  // Contains one of StreamOrderbookFill, StreamSubaccountUpdate.
  oneof event {
    StreamOrderbookFill order_fill = 1;
    dydxprotocol.subaccounts.StreamSubaccountUpdate subaccount_update = 2;
    StreamOrderbookUpdate orderbook_update = 3;
  }
}
